--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Login & Register</title>
 </head>
 <body>
@@ -55,7 +55,7 @@
                     // Save token in localStorage
                     localStorage.setItem('authToken', data.token);
                     alert('Login successful');
-                    window.location.href = './home.html'; // Redirect to product page on success
+                    window.location.href = './vendor/home.html'; // Redirect to product page on success
                 } else {
                     alert('Login failed');
                 }
